--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "libof-doc",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Library for generating odt and doc documents for JavaScript",
   "main": "dist-node/index.js",
   "module": "dist-browser/index.js",
-  "types": "types/index.ts",
+  "types": "src/index.ts",
   "homepage": "https://github.com/GonzaloRando03/Libof-Doc",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "build": "npm run build-browser & npm run build-node"
   },
   "keywords": [
-    "Document",
+    "document",
     "doc",
     "docx",
     "generate",
